Bug 292907 - Kst keeps asking for confirmation of the file name
Summary: Kst keeps asking for confirmation of the file name
Status: RESOLVED FIXED
Alias: None
Product: kst
Classification: Applications
Component: general (other bugs)
Version First Reported In: 2.0.4
Platform: Microsoft Windows Microsoft Windows
: NOR normal
Target Milestone: ---
Assignee: kst
URL:
Keywords:
Depends on:
Blocks:
 
Reported: 2012-01-30 20:51 UTC by Nicolas Brisset
Modified: 2012-02-03 16:35 UTC (History)
0 users

See Also:
Latest Commit:
Version Fixed/Implemented In:
Sentry Crash Report:


Attachments

Note You need to log in before you can comment on or make changes to this bug.
Description Nicolas Brisset 2012-01-30 20:51:56 UTC
Version:           2.0.4
OS:                MS Windows

When saving work from a new session into a .kst file, subsequent save operations require a filename+confirmation to overwrite. The filename should be requested only once.

Reproducible: Always

Steps to Reproduce:
- start kst without any file (empty session)
- load some vectors from an ASCII file into a couple of plots
- click the save icon => you are prompted for a filename, click OK and the work is saved
- add one plot
- click on the save icon again

Actual Results:  
You are prompted for a filename again, and need to confirm if you reselect the previously selected file

Expected Results:  
The work gets saved into the file as it would if you had loaded the .kst upon starting kst.
Comment 1 Nicolas Brisset 2012-02-03 16:35:41 UTC
SVN commit 1277942 by brisset:

Make sure that the document state is set correctly also when saving to avoid asking the user again and again for a filename.
This fixes the reported issue and I can't think of any negative side effect. Barth, can you review the change quickly?




 M  +1 -1      document.cpp  


WebSVN link: http://websvn.kde.org/?view=rev&revision=1277942