Make sure that the document state is set correctly also when saving to avoid asking the user again and again for a filename. This fixes the reported issue and I can't think of any negative side effect. Barth, can you review the change quickly?

BUG: 292907



git-svn-id: svn://anonsvn.kde.org/home/kde/branches/work/kst/portto4/kst@1277942 283d02a7-25f6-0310-bc7c-ecb5cbfe19da